# WhileCompiler

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakelists.txt  README.md  a.out  file.cpp  integer.cpp  out.cpp  pom.xml  test.cpp  tests.sh
documentation/: 2_addresses_operation.txt
documentation/conception/: class_diagram.wsd
documentation/documentation_utilisateur/: documentation-utilisateur.typ
documentation/rapport/: rapport.typ
documentation/rapport/resources/: 2_addresses_operation.txt
documentation/rapport/template/: ESIR.typ
src/antlr/: WhileGrammar.g3
src/antlr/.antlr/: WhileGrammarParser.java
src/antlr/output/: WhileGrammarLexer.java  WhileGrammarParser.java  __Test__.java
src/main/antlr3/: WhileGrammar.g
src/main/java/antlr/: WhileGrammarLexer.java  WhileGrammarParser.java
src/main/java/while_compiler/: ArgsManager.java  Command.java  FileManager.java  FunctionSignature.java  LibraryFunctions.java  Main.java
src/main/java/while_compiler/Visitor/: Visitor.java
src/test/java/while_compiler/: MainTest.java
src/while_compiler/: .gitignore  a.out  out  out.cpp  pom.xml
src/while_compiler/src/cpp_library/: Library.cpp  Tree.cpp
test/: bools.cpp  boucles.cpp  cons.cpp  head_tail.cpp  if.cpp  integers.cpp  list.cpp  multi_return.cpp  tools.h
test/lang/: bigtest.while  bools.while  boucles.while  cons.while  full.while  head_tail.while  if.while  integers.while  list.while  main.while  multi_return.while  nop.while  table_symboles.while
test/lang_error/: function_not_defined.while  ill_formated_function.while  keyword_function_name.while
(+94 files in other folders)
